# esp32-ai-builder

./: .gitignore  README.md  pytest.ini
backend/: README.md  ai_advice.py  calibration_coach.py  conftest.py  csi_calibration.py  csi_confidence.py  csi_demo_simulator.py  csi_filters.py  csi_fingerprint.py  csi_motion.py  csi_power_summary.py  csi_quality.py  csi_recommendations.py  csi_spectrogram.py  csi_subcarriers.py  csi_terminal_receiver.py  esp_live_probe.py  judge_briefing.py  live_label_evaluator.py  live_label_report.py  live_occupancy.py  main.py  material_change.py  motion_cadence.py  observatory_state.py  person_count.py  pyproject.toml  room_state_tracker.py  telegram_delivery.py  test_ai_advice.py  test_apnea_detector.py  test_calibration_coach.py  test_csi_demo_simulator.py  test_csi_filters.py  test_csi_fingerprint.py  test_csi_motion.py  test_csi_power_summary.py  test_csi_spectrogram.py  test_dashboard_integrity.py  test_dsp_details.py  (+28 more)
esp32-csi-gemma-filter/: .env.example  .gitignore  README.md
esp32-csi-gemma-filter/docs/: architecture.md  csi-format.md  experiment-log.md  gemma-filter-policy.md
esp32-csi-gemma-filter/python-engine/: activity_classifier.py  app.py  calibration_report.py  config.py  csi_parser.py  diagnose_ollama.py  features.py  filters.py  gemma_advisor.py  labeling.py  plot_signal.py  presence_alerts.py  requirements.txt  serial_reader.py  simulator.py
esp32-csi-gemma-filter/tests/: conftest.py  test_filters.py  (+8 more)
frontend/: README.md  app.py  package.json  pnpm-lock.yaml
include/: wifi_credentials.example.h
src/: main.cpp
(+28 files in other folders)
