[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "uvicorn>=0.47.0",
    "pyserial>=3.5",
    "streamlit>=1.35.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "scipy>=1.7.0",
    "google-genai>=1.54.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
